# forall_print

./: CMakeLists.txt  READEME.md
Dialect/IR/: dialect.td  dialect_op.td
Dialect/Pass/: DropPass.cpp
IR/: dialect_op.td
include/: Pass.h  dialect.h  dialect_op.h
lib/: dialect.cpp
tests/: README.md  forall.bc  forall.ll  forall.mlir  forall_double.mlir  forall_double_i.bc  forall_double_low.mlir  forall_i.bc  forall_low.mlir
tests/forall_all_i64_add/: 3.bc  3.ll  3.mlir
tests/forall_low_index/: forall_low.mlir  forall_low_index.ll  forall_low_index.mlir  forall_low_mul.bc  forall_low_mul.ll
tests/lib/: README.md  runtime.c
tests/my_for_low/scf_cmp/: scf_cmp.mlir
tests/my_for_low/test_my_for/: README.md  test.mlir
tools/: test_opt.cpp
